--- a/src/Modules/dashboard.css
+++ b/src/Modules/dashboard.css
@@ -150,7 +150,7 @@ img.reportIcon {
 }
 span.report-val {
   font-size: 2rem;
-  font-family: 'Space Grotesk';
+  font-family: "Space Grotesk";
   font-weight: 200;
 }
 
@@ -162,7 +162,7 @@ span.report-val {
 }
 
 .full-report-values {
-  background-image: url('./../images/innerBg.png');
+  background-image: url("./../images/innerBg.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -177,11 +177,11 @@ span.report-val {
 }
 .value {
   font-size: 0.9rem;
-  font-family: 'Space Grotesk';
+  font-family: "Space Grotesk";
   font-weight: 400;
 }
 .weather-report {
-  background-image: url('./../images/report-background.png');
+  background-image: url("./../images/report-background.png");
   background-position: center;
   background-size: cover;
   padding: 0.2rem;
