--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ h6 {
   overflow-y: auto;
   overflow-x: hidden;
   transition: width 0.5s ease-in-out, margin-left 0.5s ease-in-out;
-  padding: 0.5rem 0.8rem 0 0.8rem;
+  padding: 0 0.8rem;
   margin-left: 18%;
 }
 
