--- a/src/Modules/dashboard.css
+++ b/src/Modules/dashboard.css
@@ -4,12 +4,6 @@
   overflow: hidden;
 }
 
-.mainContInfo {
-  margin: 1.4rem;
-  padding: 1rem;
-  background-color: #fff;
-  border-radius: 0.6rem;
-}
 .logo {
   padding-bottom: 2.4rem;
 }
@@ -87,7 +81,7 @@ nav.navbar-cont.navbar.navbar-expand-lg.navbar-light {
   position: sticky;
   top: 0;
   backdrop-filter: blur(8px);
-  padding: 0.4rem 0.8rem;
+  padding: 0.5rem 0;
   z-index: 999;
 }
 
@@ -109,7 +103,7 @@ nav.navbar-cont.navbar.navbar-expand-lg.navbar-light {
 }
 
 .mainContInfo {
-  padding: 1rem;
+  padding: 0.5rem;
   background-color: #fff;
   border-radius: 0.6rem;
 }
