--- a/src/Modules/dashboard.css
+++ b/src/Modules/dashboard.css
@@ -44,7 +44,7 @@ img.nav-logo {
 
 .profile-count {
   font-weight: 600;
-  background: red;
+  /* background: red; */
   height: 1.2rem;
   width: 1.2rem;
   border-radius: 50%;
