profile icons and color updated and graphs mapped correctly

--- a/src/components/map.css
+++ b/src/components/map.css
@@ -23,6 +23,7 @@ span.profileName {
 .station-weather-report.activestation {
   border-top: 1px solid rgba(223, 223, 223, 1);
   background-color: rgba(37, 109, 240, 0.1);
+  width: auto;
 }
 
 .stationName.activestation {
