reposrt header changed and summary graph ,main layout changed

--- a/src/pages/Reports/reports.css
+++ b/src/pages/Reports/reports.css
@@ -33,7 +33,7 @@
 .summary-table-container {
   max-height: 52vh;
   overflow: auto;
-  white-space: nowrap;
+  /* white-space: nowrap; */
 }
 
 /* Apply this on mobile screens (<= 765px width) */
