--- a/src/Modules/dashboard.css
+++ b/src/Modules/dashboard.css
@@ -108,6 +108,7 @@ nav.navbar-cont.navbar.navbar-expand-lg.navbar-light {
 .navItemsCont {
   justify-content: end;
   align-items: center;
+  flex-direction: row !important;
 }
 
 .mainContInfo {
